@@ -1,3 +1,8 @@
+2020-05-23 Riccardo Mottola <rm@gnu.org>
+
+	* DBCSVWriter.m
+	Try to extract arrays which have a single element.
+
 2020-05-22 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m 
